--- a/app/src/main/res/drawable/style_rounded_blue_dark_rectangle.xml
+++ b/app/src/main/res/drawable/style_rounded_blue_dark_rectangle.xml
@@ -2,9 +2,9 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="@color/blueDark"/>
+        android:color="@color/merah"/>
 
     <corners
-        android:radius="10dp" />
+        android:radius="@dimen/default_corner" />
 
 </shape>
