--- a/app/src/main/res/drawable/style_rounded_blue_rectangle.xml
+++ b/app/src/main/res/drawable/style_rounded_blue_rectangle.xml
@@ -5,6 +5,6 @@
         android:color="@color/blueLight"/>
 
     <corners
-        android:radius="10dp" />
+        android:radius="@dimen/default_corner" />
 
 </shape>
