--- a/app/src/main/res/layout/popup_password.xml
+++ b/app/src/main/res/layout/popup_password.xml
@@ -10,9 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Masukkan Password Lama"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
         android:textStyle="bold"/>
 
     <RelativeLayout
@@ -23,7 +22,6 @@
             android:id="@+id/editOldPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:inputType="textPassword"
             android:theme="@style/RadioGroupStyle"/>
 
@@ -43,9 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Masukkan Password Baru"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
         android:textStyle="bold"/>
 
     <RelativeLayout
@@ -56,7 +53,6 @@
             android:id="@+id/editNewPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:inputType="textPassword"
             android:theme="@style/RadioGroupStyle"/>
 
@@ -76,9 +72,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ketik Ulang Password Baru"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
         android:textStyle="bold"/>
 
     <RelativeLayout
@@ -89,7 +84,6 @@
             android:id="@+id/editRepeatPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:inputType="textPassword"
             android:theme="@style/RadioGroupStyle"/>
 
