--- a/app/src/main/res/layout/activity_detail_merchant.xml
+++ b/app/src/main/res/layout/activity_detail_merchant.xml
@@ -61,13 +61,17 @@
                 android:layout_height="wrap_content"
                 android:background="@color/LightGrey"
                 android:orientation="vertical"
-                android:padding="20dp">
+                android:paddingTop="@dimen/padding_dexa"
+                android:paddingBottom="@dimen/padding_dexa"
+                android:paddingLeft="@dimen/padding_big"
+                android:paddingRight="@dimen/padding_big"
+                >
 
                 <TextView
                     android:id="@+id/txtnamaMerchant"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp"
+                    android:textSize="@dimen/text_big"
                     android:textStyle="bold"
                     android:text="Suka Coffe And Snack"
                     android:textColor="@color/black"/>
@@ -76,7 +80,7 @@
                     android:id="@+id/txtalamatMerchant"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp"
+                    android:textSize="@dimen/text_medium"
                     android:textStyle="normal"
                     android:text="Jl. Mangga Dalam Selatan"
                     android:textColor="@color/black"/>
@@ -86,62 +90,52 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="19sp"
+                android:textSize="@dimen/text_big"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginTop="@dimen/padding_default"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"
                 android:text="Deskripsi"
                 android:textColor="@color/black"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textStyle="normal"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:text="Tulis deskripsi disini"
-                android:textColor="@color/grey"/>
 
             <View
                 android:id="@+id/layout_divider1"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/line"
                 android:background="@color/black"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"/>
+                android:layout_marginTop="@dimen/padding_default"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <EditText
                 android:id="@+id/edt_deskripsi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="@dimen/padding_big"
                 android:layout_marginTop="10sp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="@dimen/padding_big"
                 android:gravity="top|start"
                 android:background="@android:color/transparent"
                 android:lines="7"
-                android:textSize="18sp"
+                android:text=""
+                android:textSize="@dimen/text_mid"
                 android:theme="@style/RadioGroupStyle"/>
 
             <View
                 android:id="@+id/layout_divider2"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/line"
                 android:background="@color/black"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"/>
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <View
                 android:id="@+id/layout_divider3"
                 android:layout_width="match_parent"
                 android:layout_height="27dp"
                 android:background="#E1E1E1"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="@dimen/padding_big"/>
 
             <RelativeLayout
                 android:id="@+id/relstive2"
@@ -153,14 +147,15 @@
                     android:id="@+id/lbl_map"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="@dimen/padding_big"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginRight="@dimen/padding_big"
                     android:text="Map"
-                    android:textColor="#000000"
-                    android:textSize="22sp"
-                    android:layout_marginBottom="20dp"
-                    app:fontFamily="sans-serif-condensed-medium"/>
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_big"
+                    android:layout_marginBottom="@dimen/padding_big"
+                    android:textStyle="bold"
+                    />
 
                 <Button
                     android:id="@+id/btnreset"
@@ -173,7 +168,7 @@
                     android:layout_alignBottom="@id/mapFragment"
                     android:layout_alignEnd="@id/mapFragment"
                     android:layout_margin="10dp"
-                    app:fontFamily="serif" />
+                    />
 
                 <fragment
                     android:id="@+id/mapFragment"
@@ -189,7 +184,7 @@
                 android:id="@+id/linear2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#E1E1E1"
+                android:background="@drawable/bacgroundgradien"
                 android:padding="15dp"
                 android:orientation="horizontal">
 
@@ -199,7 +194,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="14sp"
                     android:ellipsize="end"
                     android:layout_marginEnd="5dp"
@@ -212,7 +207,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_marginStart="5dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="14sp"
                     android:ellipsize="end"
                     app:fontFamily="sans-serif-condensed-medium" />
@@ -223,24 +218,23 @@
                 android:id="@+id/lbl_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="@dimen/padding_big"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginRight="@dimen/padding_big"
                 android:text="Upload Foto"
-                android:textColor="#000000"
-                android:textSize="22sp"
-                app:fontFamily="sans-serif-condensed-medium"/>
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_big"/>
 
             <TextView
                 android:id="@+id/txt_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="@dimen/padding_big"
+                android:layout_marginRight="@dimen/padding_big"
+                android:layout_marginBottom="@dimen/padding_big"
                 android:text="@string/icon_camera"
-                android:textSize="12sp"
-                app:fontFamily="sans-serif-condensed-medium" />
+                android:textSize="@dimen/text_medium" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -256,17 +250,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="70dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="70dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="@dimen/padding_super"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginRight="@dimen/padding_super"
+                android:layout_marginBottom="@dimen/padding_big"
                 android:background="@drawable/custom_button2"
-                android:fontFamily="sans-serif-black"
                 android:gravity="center"
-                android:text="@string/simpan"
+                android:text="@string/simpan_data_monitoring"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_big" />
 
         </LinearLayout>
 
