--- a/app/src/main/res/layout/activity_penugasan_petugas.xml
+++ b/app/src/main/res/layout/activity_penugasan_petugas.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blueLight"
+        android:background="@color/colorPrimary"
         app:titleTextColor="@color/white"
         android:minHeight="?attr/actionBarSize"
         app:popupTheme="@style/AppTheme.NoActionBar.TitleTextStyle">
@@ -23,11 +23,11 @@
         android:id="@+id/CardPendaftaran"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="@dimen/padding_big"
+        android:layout_marginStart="@dimen/padding_big"
+        android:layout_marginEnd="@dimen/padding_big"
         android:visibility="gone"
-        app:cardCornerRadius="20dp">
+        app:cardCornerRadius="@dimen/padding_default">
 
         <LinearLayout
             android:id="@+id/LinearSurvey"
@@ -43,7 +43,7 @@
                 android:text="Tugas Untuk Pendaftaran"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_big"
                 android:gravity="center_vertical|center_horizontal"
                 android:textColor="#FFFFFF" />
 
@@ -55,11 +55,11 @@
         android:id="@+id/CardMonitoring"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="@dimen/padding_big"
+        android:layout_marginStart="@dimen/padding_big"
+        android:layout_marginEnd="@dimen/padding_big"
         android:visibility="gone"
-        app:cardCornerRadius="20dp">
+        app:cardCornerRadius="@dimen/padding_default">
 
         <LinearLayout
             android:id="@+id/LinearMonitoring"
@@ -75,7 +75,7 @@
                 android:text="Tugas Untuk Monitoring"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_big"
                 android:gravity="center_vertical|center_horizontal"
                 android:textColor="#FFFFFF" />
 
@@ -87,11 +87,11 @@
         android:id="@+id/CardPetugas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="@dimen/padding_big"
+        android:layout_marginStart="@dimen/padding_big"
+        android:layout_marginEnd="@dimen/padding_big"
         android:visibility="gone"
-        app:cardCornerRadius="20dp">
+        app:cardCornerRadius="@dimen/padding_default">
 
         <LinearLayout
             android:id="@+id/LinearPetugas"
@@ -107,7 +107,7 @@
                 android:text="Hubungi Petugas"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="20sp"
+                android:textSize="@dimen/text_big"
                 android:gravity="center_vertical|center_horizontal"
                 android:textColor="#FFFFFF" />
 
