--- a/app/src/main/res/layout/activity_preview_merchant.xml
+++ b/app/src/main/res/layout/activity_preview_merchant.xml
@@ -61,13 +61,13 @@
                 android:layout_height="wrap_content"
                 android:background="@color/LightGrey"
                 android:orientation="vertical"
-                android:padding="20dp">
+                android:padding="@dimen/text_big">
 
                 <TextView
                     android:id="@+id/txtnamaMerchant"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp"
+                    android:textSize="@dimen/text_big"
                     android:textStyle="bold"
                     android:text="Suka Coffe And Snack"
                     android:textColor="@color/black"/>
@@ -76,7 +76,7 @@
                     android:id="@+id/txtalamatMerchant"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp"
+                    android:textSize="@dimen/text_small"
                     android:textStyle="normal"
                     android:text="Jl. Mangga Dalam Selatan"
                     android:textColor="@color/black"/>
@@ -86,83 +86,80 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="19sp"
+                android:textSize="@dimen/text_big"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"
                 android:text="Deskripsi"
                 android:textColor="@color/black"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_small"
                 android:textStyle="normal"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"
                 android:text="Tulis deskripsi disini"
                 android:textColor="@color/grey"/>
 
             <View
                 android:id="@+id/layout_divider1"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/line"
                 android:background="@color/black"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"/>
+                android:layout_marginTop="@dimen/padding_default"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <EditText
                 android:id="@+id/edt_deskripsi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10sp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"
                 android:gravity="top|start"
                 android:lines="7"
                 android:background="@android:color/transparent"
                 android:typeface="normal"
                 android:focusable="false"
-                android:textSize="18sp"
+                android:textSize="@dimen/text_big"
                 android:theme="@style/RadioGroupStyle"/>
 
             <View
                 android:id="@+id/layout_divider2"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/line"
                 android:background="@color/black"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"/>
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <View
                 android:id="@+id/layout_divider3"
                 android:layout_width="match_parent"
                 android:layout_height="27dp"
                 android:background="#E1E1E1"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="@dimen/padding_big"/>
 
             <RelativeLayout
                 android:id="@+id/relstive2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="@dimen/padding_default">
 
                 <TextView
                     android:id="@+id/lbl_map"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginLeft="@dimen/padding_big"
+                    android:layout_marginTop="@dimen/padding_default"
+                    android:layout_marginRight="@dimen/padding_big"
                     android:text="Map"
-                    android:textColor="#000000"
-                    android:textSize="22sp"
-                    android:layout_marginBottom="20dp"
-                    app:fontFamily="sans-serif-condensed-medium"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_big"
+                    android:layout_marginBottom="@dimen/padding_big"/>
 
                 <Button
                     android:id="@+id/btnreset"
@@ -170,12 +167,11 @@
                     android:layout_height="wrap_content"
                     android:text="@string/resetlokasi"
                     android:textAllCaps="false"
-                    android:textSize="10sp"
+                    android:textSize="@dimen/text_small"
                     android:gravity="center"
                     android:layout_alignBottom="@id/mapFragment"
                     android:layout_alignEnd="@id/mapFragment"
-                    android:layout_margin="10dp"
-                    app:fontFamily="serif" />
+                    android:layout_margin="@dimen/padding_default" />
 
                 <fragment
                     android:id="@+id/mapFragment"
@@ -204,8 +200,7 @@
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:ellipsize="end"
-                    android:layout_marginEnd="5dp"
-                    app:fontFamily="sans-serif-condensed-medium" />
+                    android:layout_marginEnd="5dp"/>
 
                 <TextView
                     android:id="@+id/textLongitude"
@@ -216,8 +211,7 @@
                     android:layout_marginStart="5dp"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:ellipsize="end"
-                    app:fontFamily="sans-serif-condensed-medium" />
+                    android:ellipsize="end"/>
 
             </LinearLayout>
 
@@ -225,28 +219,27 @@
                 android:id="@+id/lbl_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="@dimen/padding_big"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginRight="@dimen/padding_big"
                 android:text="Upload Foto"
-                android:textColor="#000000"
-                android:textSize="22sp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_big"
                 app:fontFamily="sans-serif-condensed-medium"/>
 
             <TextView
                 android:id="@+id/txt_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="@dimen/padding_big"
+                android:layout_marginRight="@dimen/padding_big"
+                android:layout_marginBottom="@dimen/padding_big"
                 android:text="@string/icon_camera"
-                android:textSize="12sp"
-                app:fontFamily="sans-serif-condensed-medium" />
+                android:textSize="12sp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
-                android:layout_margin="10dp"
+                android:layout_margin="@dimen/padding_default"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:orientation="horizontal">
