--- a/app/src/main/res/layout/list_daftar.xml
+++ b/app/src/main/res/layout/list_daftar.xml
@@ -49,34 +49,38 @@
             android:id="@+id/txt_alamat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
             android:textColor="#000000"
             android:textSize="13sp"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:text="Status"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/padding_small">
 
-        <TextView
-            android:id="@+id/txt_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textColor="#45E745"
-            android:textSize="16sp"
-            app:fontFamily="sans-serif"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="@dimen/text_mid"
+                android:text="Status terdaftar : "/>
 
-        <TextView
-            android:id="@+id/txt_status_batal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textColor="#CA0000"
-            android:textSize="16sp"
-            app:fontFamily="sans-serif"/>
+            <TextView
+                android:id="@+id/txt_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#45E745"
+                android:text=""
+                android:textSize="@dimen/text_mid" />
+
+            <TextView
+                android:id="@+id/txt_status_batal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#CA0000"
+                android:textSize="@dimen/text_mid" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
