--- a/app/src/main/res/layout/list_kategori_merchant_white.xml
+++ b/app/src/main/res/layout/list_kategori_merchant_white.xml
@@ -11,7 +11,7 @@
         android:layout_height="35dp"
         android:textAllCaps="false"
         android:textSize="14dp"
-        android:textColor="@color/DarkerBlue"
+        android:textColor="@color/white"
         android:background="@drawable/style_rounded_white_rectangle"/>
 
 </LinearLayout>
