--- a/app/src/main/res/layout/popup_account.xml
+++ b/app/src/main/res/layout/popup_account.xml
@@ -10,9 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Masukkan Nama Anda"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
         android:textStyle="bold"/>
 
     <EditText
@@ -21,40 +20,39 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:theme="@style/RadioGroupStyle"
-        android:layout_marginTop="5dp"/>
+        android:text=""
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Masukkan Nomor Telepon Anda"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/padding_small"/>
 
     <EditText
         android:id="@+id/editTextKontak"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="phone"
-        android:layout_marginTop="5dp"
         android:theme="@style/RadioGroupStyle"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Masukkan Password Baru"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
+        android:textStyle="bold"
+        android:layout_marginTop="@dimen/padding_small"/>
 
     <EditText
         android:id="@+id/editTextPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:layout_marginTop="5dp"
         android:theme="@style/RadioGroupStyle"/>
 
     <RelativeLayout
@@ -86,8 +84,7 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:layout_marginTop="5dp"
-        android:fontFamily="sans-serif-condensed-light"
         android:text="@string/fulldata"
-        android:textSize="15sp"/>
+        android:textSize="@dimen/text_mid"/>
 
 </LinearLayout>
