--- a/app/src/main/res/layout/popup_confirm.xml
+++ b/app/src/main/res/layout/popup_confirm.xml
@@ -13,76 +13,89 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:background="@color/white">
+        >
 
-        <ImageView
-            android:id="@+id/img_check"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/checked"
-            android:visibility="visible"
-            android:layout_gravity="center_vertical|center_horizontal"/>
-
-        <TextView
-            android:id="@+id/textJudulConfirm"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/confirm_simpan"
-            android:textColor="@color/black"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            android:visibility="visible"
-            android:textSize="17sp"/>
+            android:layout_height="24dp"
+            android:background="@color/grey1"></View>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:background="@color/white">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/CardCancel"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="@dimen/default_corner">
+            <ImageView
+                android:id="@+id/img_check"
+                android:layout_width="@dimen/icon"
+                android:layout_height="@dimen/icon"
+                android:src="@drawable/checked"
+                android:visibility="gone"
+                android:layout_gravity="center_vertical|center_horizontal"/>
 
-                <TextView
-                    android:id="@+id/textCancel"
-                    android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textJudulConfirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/confirm_simpan"
+                android:textColor="@color/black"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="@dimen/padding_super"
+                android:layout_marginBottom="@dimen/padding_super"
+                android:visibility="visible"
+                android:textSize="17sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/CardCancel"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Cancel"
-                    android:padding="10dp"
-                    android:textColor="@color/blueBright"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:textSize="17sp"/>
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="@dimen/default_corner">
 
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/textCancel"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Cancel"
+                        android:padding="10dp"
+                        android:background="@color/white_transparent"
+                        android:textColor="@color/black"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:textSize="@dimen/text_mid"/>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/CardSimpan"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="@dimen/default_corner">
+                </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/textSimpan"
-                    android:layout_width="match_parent"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/CardSimpan"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="Simpan Data"
-                    android:padding="10dp"
-                    android:background="@color/blueBright"
-                    android:textColor="@color/white"
-                    android:gravity="center_horizontal"
-                    android:textSize="17sp"/>
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="@dimen/default_corner">
 
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/textSimpan"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Simpan Data"
+                        android:padding="10dp"
+                        android:background="@color/colorPrimary"
+                        android:textColor="@color/white"
+                        android:gravity="center_horizontal"
+                        android:textSize="@dimen/text_mid"/>
 
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
