--- a/app/src/main/res/layout/popup_hubungi_petugas.xml
+++ b/app/src/main/res/layout/popup_hubungi_petugas.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="@dimen/padding_big"
         android:text="Hubungi Petugas"
         android:textColor="@color/redSoft"
         android:textSize="20sp"
@@ -29,18 +29,18 @@
             <View
                 android:id="@+id/layout_divider1"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#E1E1E1"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_height="@dimen/line"
+                android:background="@color/grey"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
+                android:layout_marginTop="@dimen/padding_big"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -69,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:text="diansastro88@gmail.com"
                         android:textColor="#000000"
-                        android:textSize="14sp" />
+                        android:textSize="@dimen/text_small" />
 
                 </LinearLayout>
 
@@ -78,37 +78,41 @@
             <View
                 android:id="@+id/layout_divider2"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#E1E1E1"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_height="@dimen/line"
+                android:background="@color/grey"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/CardTanggal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                app:cardCornerRadius="20dp">
+                android:layout_marginBottom="@dimen/padding_big"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
+                app:cardCornerRadius="@dimen/default_corner">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="15dp">
+                    android:background="@drawable/custom_date"
+                    android:padding="@dimen/padding_medium">
 
                     <ImageView
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_marginStart="20dp"
-                        android:src="@drawable/calender"/>
+                        android:layout_width="@dimen/icon_size_big"
+                        android:layout_height="@dimen/icon_size_big"
+                        android:layout_marginStart="@dimen/padding_default"
+                        android:src="@drawable/ic_date"/>
 
                     <TextView
                         android:id="@+id/txttanggal"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="Input Tanggal Penugasan"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="@dimen/padding_default"
                         android:gravity="center_vertical|center_horizontal"
                         android:textColor="#000000"
                         android:textSize="14sp" />
@@ -121,119 +125,121 @@
                 android:id="@+id/textketJudul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:text="Tambahkan Judul"
-                android:textColor="#000000"
-                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_mid"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_small"
                 android:textStyle="normal"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="30dp"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:text="Tulis judul kegiatan"
                 android:textColor="@color/grey"/>
+
             <View
                 android:id="@+id/layout_divider4"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="10sp"
-                android:background="#E1E1E1"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_height="@dimen/line"
+                android:background="@color/transparent"
+                android:layout_marginTop="@dimen/padding_default"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <EditText
                 android:id="@+id/edt_judulHubungi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="35dp"
+                android:minHeight="50dp"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:gravity="top|start"
                 android:textSize="14sp"
                 android:maxLines="1"
-                android:background="@android:color/transparent"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:hint="Tulis judul penugasan"
+                android:background="@drawable/custom_input"
+                android:padding="@dimen/padding_tanggung"
                 android:theme="@style/RadioGroupStyle"/>
 
             <View
                 android:id="@+id/layout_divider5"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#E1E1E1"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_height="@dimen/line"
+                android:background="@color/transparent"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <TextView
                 android:id="@+id/textket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="35dp"
+                android:layout_marginTop="@dimen/padding_default"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:text="@string/ket_caps"
-                android:textColor="#000000"
-                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_mid"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_small"
                 android:textStyle="normal"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="30dp"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:text="@string/hint_keteranganHubungi"
                 android:textColor="@color/grey"/>
 
             <View
                 android:id="@+id/layout_divider"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#E1E1E1"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_height="@dimen/line"
+                android:background="@color/transparent"
+                android:layout_marginTop="@dimen/padding_default"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <EditText
                 android:id="@+id/edt_keterangan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:gravity="top|start"
                 android:lines="5"
-                android:layout_marginTop="5dp"
-                android:textSize="14sp"
-                android:background="@android:color/transparent"
+                android:textSize="@dimen/text_mid"
+                android:padding="@dimen/padding_tanggung"
+                android:hint="Tulis keterangan penugasan"
+                android:background="@drawable/custom_input"
                 android:theme="@style/RadioGroupStyle"/>
 
             <View
                 android:id="@+id/layout_divider3"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#E1E1E1"
-                android:layout_marginTop="2dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_height="@dimen/line"
+                android:background="@color/transparent"
+                android:layout_marginStart="@dimen/padding_big"
+                android:layout_marginEnd="@dimen/padding_big"/>
 
             <Button
                 android:id="@+id/button_kirimtugas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_button2"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="60dp"
+                android:layout_marginTop="@dimen/padding_big"
+                android:layout_marginStart="@dimen/padding_super"
+                android:layout_marginEnd="@dimen/padding_super"
                 android:layout_marginBottom="20dp"
                 android:text="Kirim Tugas"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/text_big" />
 
         </LinearLayout>
 
