--- a/app/src/main/res/layout/popup_keputusan.xml
+++ b/app/src/main/res/layout/popup_keputusan.xml
@@ -10,8 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_marginTop="20dp"
-        android:fontFamily="sans-serif-condensed-light"
+        android:layout_marginTop="@dimen/padding_big"
         android:text="Cafe Murah"
         android:textColor="#17B006"
         android:textSize="40sp"
@@ -22,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:fontFamily="sans-serif-condensed-light"
+        android:layout_margin="@dimen/padding_default"
         android:text="@string/text_popup"
         android:textSize="15sp" />
 
@@ -65,7 +63,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40sp"
-        android:fontFamily="sans-serif-condensed-medium"
         android:text="@string/ket_caps"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -79,7 +76,6 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="10sp"
         android:layout_marginEnd="30dp"
-        android:fontFamily="sans-serif-condensed"
         android:gravity="top|start"
         android:hint="@string/hint_keterangan"
         android:lines="10"
