--- a/app/src/main/res/layout/popup_kontak.xml
+++ b/app/src/main/res/layout/popup_kontak.xml
@@ -10,17 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Masukkan Nomor Telepon Anda"
-        android:fontFamily="sans-serif-condensed-light"
-        android:textColor="#000000"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_big"
         android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/editTextKontak"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:layout_marginTop="5dp"/>
+        android:inputType="phone" />
 
     <RelativeLayout
         android:layout_width="match_parent"
