--- a/app/src/main/res/layout/popup_signature.xml
+++ b/app/src/main/res/layout/popup_signature.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:text="Untuk melengkapi data mohon dicantumkan\ntanda tangan wajib pajak"
             android:gravity="center"
-            android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_mid"
             android:layout_marginBottom="15dp"/>
 
         <View
@@ -57,7 +58,7 @@
             android:layout_height="wrap_content"
             android:text="Tanda Tangan Disini"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_big"
             android:textColor="@color/blueLight"
             android:layout_marginBottom="5dp"/>
 
@@ -67,6 +68,7 @@
             android:text="( Wajib Pajak )"
             android:gravity="center"
             android:textSize="12sp"
+            android:textColor="@color/black"
             android:layout_marginBottom="15dp"/>
 
         <Button
@@ -74,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Simpan"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/padding_default"
             android:background="@drawable/style_rounded_blue_rectangle"
             android:textColor="@color/white"/>
 
